--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             
         </section>
         <section id="rede-social">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="logo home"></a><br> <!--NO target COLOCAMOS O QUE ATRIBUÍMOS NO name DO iframe-->
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br> 
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br> 
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br> <!--NO target COLOCAMOS O QUE ATRIBUÍMOS NO name DO iframe-->
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br> 
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br> 
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br> 
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br> 
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> 
