--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a><br> <!--NO target COLOCAMOS O QUE ATRIBUÍMOS NO name DO iframe-->
             <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a><br> 
             <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a><br> 
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br> 
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br> 
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> 
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a><br> 
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a><br> 
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> 
         </section>
     </main>
 </body>
