--- a/linkedin.html
+++ b/linkedin.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/social.css">
-    <title>Twitter</title>
+    <title>LinkedIn</title>
 </head>
 <body>
-    <img src="imagens/tela-twitter.jpg" alt="Twitter">
-    <a href="https://twitter.com/guanabara" target="_blank">ACESSE</a>
+    <img src="imagens/tela-linkedin.jpg" alt="LinkedIn">
+    <a href="https://www.linkedin.com/in/leonardo-barbosa-10a86318a/" target="_blank">ACESSE</a>
+    
 </body>
 </html>
